# frai-benchmark

./: .gitignore  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/PULL_REQUEST_TEMPLATE/: model.md
.github/workflows/: bench-pending.yml  bench-submission.yml  deploy-website.yml  run-benchmark.yml  validate-models.yml  validate-pr.yml
models/: SCHEMA.md
models/azure/: deepseek-v3.2.yaml  gpt-4o.yaml  gpt-5.1.yaml  gpt-5.2-chat.yaml  gpt-5.2-codex.yaml  gpt-5.2.yaml  gpt-5.4-pro.yaml  grok-4-fast-reasoning.yaml  kimi-k2-thinking.yaml  mistral-large-3.yaml
models/openrouter/: 01-ai-yi-large.yaml  amazon-nova-lite-v1.yaml  amazon-nova-pro-v1.yaml  anthropic-claude-3-haiku.yaml  anthropic-claude-3-opus.yaml  anthropic-claude-3.5-sonnet.yaml  anthropic-claude-haiku-4.5.yaml  anthropic-claude-opus-4.7.yaml  anthropic-claude-sonnet-4.6.yaml  arcee-ai-trinity-large-thinking.yaml  cohere-command-r-plus.yaml  cohere-command-r.yaml  databricks-dbrx-instruct.yaml  deepseek-deepseek-chat.yaml  deepseek-deepseek-r1.yaml  google-gemini-2.0-flash.yaml  google-gemini-flash-1.5.yaml  google-gemini-pro-1.5.yaml  google-gemma-4-31b-it-free.yaml  (+23 more)
scripts/: build_leaderboard_data.py  client.py  community_models.py  curate_dataset.py  generate_dataset.py  judge.py  model_registry.py  probe_deployments.py  run_benchmark.py  summarize_results.py  validate_models.py  validate_tests.py  visualize_results.py  working_deployments.json
website/: next.config.ts  package-lock.json  package.json
(+37 files in other folders)
